2006-10-27 Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XIMInputServer.m (-initWithDelegate:display:name:):
	Replace call to GetStringEncoding with [NSString
	localizedNameOfStringEncoding:] 
	* Source/x11/XGServerWindow.m (-_setupMouse): Make log message on
	multiple mouse buttons a debug log message. Seems like newer X
	servers detect loads of mouse buttons which are not there.
	
2006-10-21  Matt Rice  <ratmice@yahoo.com>
	
	* Source/win32/WIN32Server.m: Update -windowlist implementation.
	* Source/x11/XGServerWindow.m (-orderwin:::): Replace
	desiredOrderedWindow with ignore_take_focus.
	(windowlist): Implement.
	(setinputfocus:): Replace desiredOrderedWindow with ignore_take_focus.
	* Headers/x11/XGGeneric.h (XGGeneric): Remove desiredOrderedWindow.
	* Headers/x11/XGServerWindow.h (gswindow_device_t):
	Add ignore_take_focus.

2006-10-15 22:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/gsc/GSStreamContext.m: GSRectClipList() copied 
	implementation from GSGState.m.

2006-10-15 11:14-EDT Mark Tracy <tracy454 at concentric dot net>

	* Source/gsc/GSStreamContext.m: GSStreamContext did not implement 
	GSRectFillList fix: copied code from GSGState.m.
	Patch applied by Gregory Casamento
	
2006-10-12  Adam Fedor  <fedor@gnu.org>

	* Source/xlib/XGFontSetFontInfo.m (-drawGlyphs:length:onDisplay:drawable:with:at:], [-widthOfGlyphs:length:]): Fix spelling of length
	
2006-10-11 Nicola Pero <nicola.pero@meta-innovation.com>

	* GNUmakefile (GNUSTEP_INSTALLATION_DOMAIN): Use GNUSTEP_INSTALLATION_DOMAIN
	instead of GNUSTEP_INSTALLATION_DIR.

2006-10-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServerEvent.m:
	For help key, generate key/down/up ewvent as well as flag changes.
	Use X Super_L key symbol as default backup help key, since many
	keyboards don't have a help key mapping by default, but the super
	keys are often the 'windows' keys available on PC keyboards.
	* Version: bump version number for next release
