@@ -52,7 +52,8 @@ ADDITIONAL_LIB_DIRS += $(GRAPHIC_LFLAGS)
 libgnustep-$(BACKEND_FULL)_BUNDLE_LIBS = $(GRAPHIC_LIBS)
 
 ifeq ($(BACKEND_BUNDLE),)
-libgnustep-$(BACKEND_FULL)_LIBRARIES_DEPEND_UPON = $(GRAPHIC_LIBS)
+libgnustep-$(BACKEND_FULL)_LIBRARIES_DEPEND_UPON = \
+	-lgnustep-gui -l$(FOUNDATION_LIBRARY_NAME) $(GRAPHIC_LIBS)
 endif
 
 
