@@ -24,9 +24,9 @@ ifeq ($(BACK_MAKE_LOADED),)
 BACK_MAKE_LOADED=yes
 
 ifeq ($(BACKEND_BUNDLE),)
-  GRAPHIC_LIBS=@GRAPHIC_LIBS@
-  GRAPHIC_CFLAGS=@GRAPHIC_CFLAGS@
-  GRAPHIC_LFLAGS=@GRAPHIC_LFLAGS@
+  GRAPHIC_LIBS=@LIBS@
+  GRAPHIC_CFLAGS=@CPPFLAGS@
+  GRAPHIC_LFLAGS=@LDFLAGS@
   X_PRE_LIBS=@X_PRE_LIBS@
 
   BACKEND_LDFLAGS =
